# freeimage

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CacheFile.h  FreeImage.2013.sln  FreeImage.2013.vcxproj  FreeImage.2013.vcxproj.filters  FreeImage.2017.vcxproj  FreeImage.h  FreeImage.rc  Makefile.gnu  Makefile.mingw  Makefile.osx  Makefile.srcs  Plugin.h  Quantizers.h  README.md  Utilities.h  Whatsnew.txt  appveyor.yml  build.sh  build.xml  clean.sh  cmake.toml  fipMakefile.srcs  genfipsrclist.sh  gensrclist.sh  premake5.lua  test.txt  thumbs.bat
Examples/Generic/: BatchLoad.cpp  CloneMultiPage.cpp  CreateAlpha.cpp  FIFImportExport.cpp  FIIO_Mem.cpp  FIIO_Mem.h  LoadFromHandle.cpp  LoadFromMemory-classified.cpp  LoadFromMemory.cpp  ShowMetadata.cpp
Examples/Linux/: linux-gtk.c
Examples/Plugin/: PluginCradle.cpp
FreeImage/: BitmapAccess.cpp  CacheFile.cpp  ColorLookup.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion4.cpp  Conversion8.cpp  ConversionRGBF.cpp  ConversionType.cpp  FreeImage.cpp  Halftoning.cpp  J2KHelper.cpp  MemoryIO.cpp  MultiPage.cpp  PSDParser.cpp  PSDParser.h  PixelAccess.cpp  Plugin.cpp  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  PluginIFF.cpp  PluginJ2K.cpp  PluginJP2.cpp  PluginJPEG.cpp  PluginKOALA.cpp  PluginMNG.cpp  PluginPCD.cpp  PluginPCX.cpp  PluginPFM.cpp  PluginPICT.cpp  PluginPNG.cpp  (+15 more)
FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp  Resize.h
LibJPEG/: CMakeLists.txt
LibMNG/: CMakeLists.txt  libmng_error.c  libmng_object_prc.c
LibOpenJPEG/: CMakeLists.txt  cio.c  dwt.c  event.c  image.c  image.h  j2k.c  j2k.h  jp2.c  jp2.h  mqc.h  openjpeg.c  openjpeg.h  opj_includes.h  opj_malloc.h  pi.c  raw.h  t1.c  t1.h  t2.c  t2.h  tcd.c  tcd.h
LibPNG/: CMakeLists.txt  License  libpng.txt  png.c  png.h  pngerror.c  pngget.c  pngmem.c  pngpread.c  pngread.c  pngrio.c  pngrtran.c  pngrutil.c  pngset.c  pngtrans.c  pngwio.c  pngwrite.c  pngwtran.c  pngwutil.c
LibRawLite/: CMakeLists.txt
LibRawLite/internal/: dcraw_common.cpp  defines.h
LibRawLite/libraw/: libraw.h  libraw_alloc.h  libraw_datastream.h  libraw_internal.h  libraw_types.h
LibRawLite/src/: libraw_c_api.cpp  libraw_cxx.cpp
LibTIFF/: CMakeLists.txt  ChangeLog  tif_aux.c  tif_codec.c  tif_color.c  tif_compress.c  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_dumpmode.c  tif_error.c  tif_extension.c  tif_fax3.c  tif_fax3.h  tif_getimage.c  tif_jpeg.c  tif_luv.c  tif_lzw.c  tif_next.c  tif_ojpeg.c  tif_open.c  tif_pixarlog.c  tif_predict.c  tif_print.c  tif_read.c  tif_strip.c  tif_swab.c  tif_tile.c  tif_warning.c  tif_write.c  tif_zip.c  tiff.h  tiffio.h  tiffiop.h
Metadata/: Exif.cpp  FIRational.cpp  FreeImageTag.cpp  FreeImageTag.h  IPTC.cpp  TagConversion.cpp  TagLib.cpp  XTIFF.cpp
OpenEXR/: CMakeLists.txt
OpenEXR/Half/: half.cpp
OpenEXR/Iex/: IexMacros.h
OpenEXR/IlmImf/: ImfOutputFile.cpp  ImfScanLineInputFile.cpp  ImfTiledMisc.cpp  ImfTiledOutputFile.cpp
OpenEXR/Imath/: ImathMatrix.h  ImathVec.cpp  ImathVec.h
Source/: CMakeLists.txt  CacheFile.h  FreeImage.h  FreeImage.hpp  FreeImageIO.h  Plugin.h  Quantizers.h  ToneMapping.h  Utilities.h  cmake.toml  test.txt
Source/DeprecationManager/: Deprecated.cpp  DeprecationMgr.cpp  DeprecationMgr.h
Source/FreeImage/: BitmapAccess.cpp  CacheFile.cpp  ColorLookup.cpp  Conversion.cpp  Conversion16_555.cpp  Conversion16_565.cpp  Conversion24.cpp  Conversion32.cpp  Conversion4.cpp  Conversion8.cpp  ConversionFloat.cpp  ConversionRGB16.cpp  ConversionRGBA16.cpp  ConversionRGBAF.cpp  ConversionRGBF.cpp  ConversionType.cpp  ConversionUINT16.cpp  FreeImage.cpp  FreeImageIO.cpp  GetType.cpp  Halftoning.cpp  J2KHelper.cpp  LFPQuantizer.cpp  MNGHelper.cpp  MemoryIO.cpp  MultiPage.cpp  NNQuantizer.cpp  PSDParser.cpp  PSDParser.h  PixelAccess.cpp  Plugin.cpp  Plugin.h  PluginBMP.cpp  PluginCUT.cpp  PluginDDS.cpp  PluginEXR.cpp  PluginG3.cpp  PluginGIF.cpp  PluginHDR.cpp  PluginICO.cpp  (+35 more)
Source/FreeImageLib/: CMakeLists.txt  FreeImageLib.2013.vcxproj  FreeImageLib.2017.vcxproj
Source/FreeImageToolkit/: BSplineRotate.cpp  Background.cpp  Channels.cpp  ClassicRotate.cpp  Colors.cpp  CopyPaste.cpp  Display.cpp  Flip.cpp  JPEGTransform.cpp  MultigridPoissonSolver.cpp  Rescale.cpp  Resize.cpp  Resize.h
Source/LibJPEG/: CMakeLists.txt  LibJPEG.2013.vcxproj  ansi2knr.c  cderror.h  cdjpeg.c  cjpeg.c  ckconfig.c  cmake.toml  djpeg.c  example.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jcdctmgr.c  jchuff.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdsample.c  jdtrans.c  jerror.c  jinclude.h  jmemansi.c  (+23 more)
Source/LibJXR/: CMakeLists.txt  LICENCE  LibJXR.2013.vcxproj  cmake.toml
Source/LibMNG/: _FI_3151_PluginMNG.cpp  libmng.h  libmng_jpeg.c
Source/LibOpenJPEG/: CMakeLists.txt  LibOpenJPEG.2013.vcxproj  bio.h  cio.c  cio.h  cmake.toml  dwt.c  event.c  event.h  image.c  image.h  j2k.c  j2k.h  jp2.c  jp2.h  mqc.c  mqc.h  openjpeg.c  openjpeg.h  opj_includes.h  opj_malloc.h  pi.c  raw.h  t1.c  t1.h  (+6 more)
TestAPI/: MainTestSuite.cpp  Test.2017.vcxproj  TestSuite.h  mpage-mstream-redirect.tif  redirect-stream.tif  testChannels.cpp  testHeaderOnly.cpp  testImageType.cpp  testJPEG.cpp  testMPage.cpp  testMPageMemory.cpp  testMPageStream.cpp  testMemIO.cpp  testPlugins.cpp  testThumbnail.cpp  testTools.cpp  testWrappedBuffer.cpp
Wrapper/: CMakeLists.txt  cmake.toml
debian/: .gitlab-ci.yml  README.source  changelog  control  copyright  freeimage-get-orig-source  libfreeimage-dev.install  libfreeimage3.install  libfreeimageplus-dev.install  libfreeimageplus-doc.doc-base  libfreeimageplus-doc.docs  libfreeimageplus3.install  rules  watch
(+626 files in other folders)
